InventoryManagement/force-app/src/objects/Material_Return_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Material_Return__c</fullName>
        <label>Material Return</label>
        <referenceTo>Material_Return__c</referenceTo>
        <relationshipLabel>Material Return Line Items</relationshipLabel>
        <relationshipName>Material_Return_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>ProductItem</referenceTo>
        <relationshipLabel>Material Return Line Items</relationshipLabel>
        <relationshipName>Material_Return_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Request_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Request Line Item</label>
        <referenceTo>ProductRequestLineItem</referenceTo>
        <relationshipLabel>Material Return Line Items</relationshipLabel>
        <relationshipName>Material_Return_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Transfer</label>
        <referenceTo>ProductTransfer</referenceTo>
        <relationshipLabel>Material Return Line Items</relationshipLabel>
        <relationshipName>Material_Return_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Material Return Line Items</relationshipLabel>
        <relationshipName>Material_Return_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Returned__c</fullName>
        <label>Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Unit_of_Measure__c</fullName>
        <label>Quantity Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>LFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Material Return Line Items</relationshipLabel>
        <relationshipName>Material_Return_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Material Return Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MRLI-{0000}</displayFormat>
        <label>Material Return Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Return Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>